# sonelle

./: .dev-tui.json  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-candidate.yml  release.yml
apps/desktop/: package.json
docs/: architecture-principles.md  development.md  roadmap.md
docs/decisions/: 0004-local-narration.md  0005-word-dictionary-lookup.md  0005-word-learning-tools.md  0006-library-power-tools.md  0007-chapter-navigation.md  0008-epub-import-hardening.md  0009-reading-progress-and-jumps.md  0011-reader-performance-projections.md  0013-language-aware-narration.md  0014-domain-event-reactions.md  0015-in-app-voice-installation.md  0016-hybrid-local-narration.md  0017-supertonic-native-synthesis.md  0018-kokoro-native-runtime-boundary.md  0019-kokoro-english-g2p-boundary.md  0020-kokoro-native-manifest-rendering.md  0021-local-kokoro-engine-catalog.md  0022-native-system-font-catalog.md  0023-local-error-diagnostics.md  0026-ephemeral-domain-events.md
docs/modules/: text.md  (+13 more)
scripts/: dev-stop.mjs  dev-tui.mjs  release-candidate-workflow.test.ts  run-narration-native-spike.mjs  run-narration-native-spike.test.ts  run-narration-provider-smoke.mjs  run-narration-provider-smoke.test.ts  setup-kokoro-reference.mjs  setup-kokoro-reference.test.ts  setup-piper-voice.mjs
tools/narration-spike/native-runtime/: Cargo.toml  README.md
tools/narration-spike/native-runtime/src/: main.rs
(+132 files in other folders)
